--- a/Example/index.html
+++ b/Example/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=b, initial-scale=1.0">
+    <!-- icono de navegador -->
+    <link rel="shortcut icon" href="img/coff1.png">
+    <!-- icono de navegador -->
+
     <title>Mi Mascota</title>
     <!-- Estilos  -->
     <link rel="stylesheet" href="estilos.css">
@@ -12,7 +16,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Menu -->
+    <!-- UP -->
+    <div class="up">
+        <span><i class="fas fa-arrow-circle-up"></i></span>
+    </div>
+
+    <!-- Menu -->
 <header id="header">
     <nav class="menu">
         <div class="log-box">
@@ -32,7 +41,7 @@
  <!-- header imagen -->
     <div class="img-header">
         <div class="welcome">
-            <h1><i class="fas fa-paw"></i>Bienvenidos a verme<i class="fas fa-paw"></i></h1>
+            <h1><i class="fas fa-paw"></i> Bienvenidos <i class="fas fa-paw"></i></h1>
             <hr>
             <p>Me gusta jugar mucho y comer Dogui</p>
             <button id="abajo">Ver abajo</button>
@@ -44,12 +53,12 @@
 <main>
     <section class="acerca-de">
         <div class="info-container">
-            <h1>Acerca de nosotros</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sed perspiciatis, dignissimos maxime,repellendus blanditiis consectetur sint fugit saepe</p>
-            <p>praesentium cumque non repellat. Distinctio, esse qui nesciunt quas tempora unde.</p>
+            <h1>Acerca de mi</h1>
+            <p>Estoy mejorandome como programador junior, me estoy capacitando a diario y estoy estudiando.</p>
+            <p>Las tecnologias que estoy utilizando a diario son javaScript - CSS - HTML</p>
             <div class="about-gallery">
-                <img src="img/img0.jpg" alt="">
-                <img src="img/img0.jpg" alt="">
+                <img src="img/tecn1.jpg" alt="">
+                <img src="img/tecn2.jpg" alt="">
                 <img src="img/img0.jpg" alt="">
             </div>
 
@@ -66,16 +75,16 @@
        <div class="ejeZproyect">
            <div class="container-project">
 
-            <div class="project-title">
-                <h2>Nuetros proyectos</h2>
-                <br>
-            </div>
+                <div class="project-title">
+                    <h2>Nuetros proyectos</h2>
+                    <hr>
+                </div>
 
             <div class="project-img">
-                <img src="img/img4.jpg" alt="">
-                <img src="img/img5.jpg" alt="">
-                <img src="img/img6.jpg" alt="">
-                <img src="img/img8.jpg" alt="">
+                <img src="img/proyect1.jpg" alt="">
+                <img src="img/proyect2.jpg" alt="">
+                <img src="img/proyect3.jpg" alt="">
+                <img src="img/img2.jpg" alt="">
             </div>
 
            </div>
@@ -85,39 +94,52 @@
    
    <!-- Testimonios -->
    <section class="testimonios">
-       <div class="testimonios-title">
-           <h2>Testimonios</h2>
-           <hr>
-       </div>
-
-       <div class="box-testimonios">
-        <div class="card-testimonio">
-            <div class="card-img"><img src="img/pablo.JPG" alt=""></div>
-            <div class="testimonio-text">
-                <h4>Pablo Perez</h4>
-                <p>Es un hecho establecido desde hace mucho tiempo que un lector se distraerá con el contenido legible de una página cuando mire su diseño.El punto de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal, en lugar de usar 'Contenido aquí, contenido aquí', lo que hace que parezca un inglés legible.  </p>
-            </div>
+        <div class="testimonios-title">
+            <h2>Testimonios</h2>
+            <hr>
         </div>
 
         <div class="box-testimonios">
-            <div class="card-testimonio">
-                <div class="card-img"><img src="img/img2.jpg" alt=""></div>
-                <div class="testimonio-text">
-                    <h4>Pablo Perez</h4>
-                    <p>Es un hecho establecido desde hace mucho tiempo que un lector se distraerá con el contenido legible de una página cuando mire su diseño.El punto de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal, en lugar de usar 'Contenido aquí, contenido aquí', lo que hace que parezca un inglés legible.  </p>
+                <div class="card-testimonio">
+                    <div class="card-img"><img src="img/perfi1.jpeg" alt=""></div>
+                    <div class="testimonio-text">
+                        <h4>Pablo Perez</h4>
+                        <p>Es un hecho establecido desde hace mucho tiempo que un lector se distraerá con el contenido legible de una página cuando mire su diseño.El punto de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal, en lugar de usar 'Contenido aquí, contenido aquí', lo que hace que parezca un inglés legible.  </p>
+                    </div>
                 </div>
             </div>
 
-        <div class="box-testimonios">
-            <div class="card-testimonio">
-                <div class="card-img"><img src="img/img1.jpg" alt=""></div>
-                <div class="testimonio-text">
-                    <h4>Pablo Perez</h4>
-                    <p>Es un hecho establecido desde hace mucho tiempo que un lector se distraerá con el contenido legible de una página cuando mire su diseño.El punto de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal, en lugar de usar 'Contenido aquí, contenido aquí', lo que hace que parezca un inglés legible.  </p>
+                <div class="box-testimonios">
+                    <div class="card-testimonio">
+                        <div class="card-img"><img src="img/perfi1.jpeg" alt=""></div>
+                        <div class="testimonio-text">
+                            <h4>Ariel Perez</h4>
+                            <p>Es un hecho establecido desde hace mucho tiempo que un lector se distraerá con el contenido legible de una página cuando mire su diseño.El punto de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal, en lugar de usar 'Contenido aquí, contenido aquí', lo que hace que parezca un inglés legible.  </p>
+                        </div>
+                    </div>
                 </div>
-            </div>   
 
-    </div>
+                <div class="box-testimonios">
+                    <div class="card-testimonio">
+                        <div class="card-img"><img src="img/perfi1.jpeg" alt=""></div>
+                        <div class="testimonio-text">
+                            <h4>Emanuel Perez.</h4>
+                            <p>Es un hecho establecido desde hace mucho tiempo que un lector se distraerá con el contenido legible de una página cuando mire su diseño.El punto de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal, en lugar de usar 'Contenido aquí, contenido aquí', lo que hace que parezca un inglés legible.  </p>
+                        </div>
+                    </div>  
+                </div>     
+
+                <div class="box-testimonios">
+                    <div class="card-testimonio">
+                        <div class="card-img"><img src="img/perfi1.jpeg" alt=""></div>
+                        <div class="testimonio-text">
+                            <h4>Emanuel Perez.</h4>
+                            <p>Es un hecho establecido desde hace mucho tiempo que un lector se distraerá con el contenido legible de una página cuando mire su diseño.El punto de usar Lorem Ipsum es que tiene una distribución de letras más o menos normal, en lugar de usar 'Contenido aquí, contenido aquí', lo que hace que parezca un inglés legible.  </p>
+                        </div>
+                    </div>  
+                </div>    
+        </div>
+
 
    </section>
 
@@ -125,11 +147,13 @@
 <!-- footer -->
 <footer class="footer">
 <div class="deg-footer">
+
     <div class="ejeZfooter">
         <div class="footer-content">
+        <div class="footer-title">
             <h2>Formulario</h2>
             <hr>
-        </div>
+        </div>   
 
         <div class="formulario-content">
             <form id="formulario">
@@ -145,7 +169,7 @@
                 <div class="send"><button>Enviar</button></div>
 
                 <div class="mensaje-form">
-                    <p>Escribenos un mensaje</p>
+                    <p>Escribenos un mensaje ♥</p>
                 </div>
             
             </form>
@@ -154,6 +178,7 @@
         <div class="footer-text">
             <p>&copy;Diseñado por Pablo Perez -2021 || Derechos reservados</p>
         </div>
+    </div>
 
     </div>
 </div>
