--- a/Example/index.html
+++ b/Example/index.html
@@ -47,6 +47,10 @@
             <button id="abajo">Ver abajo</button>
         </div>
     </div>
+
+    <div class="erase-abajo">
+
+    </div>
 </header>
 
 <!-- navegacion de menu -->
@@ -69,7 +73,11 @@
 
     </section>
    <!-- Mi Proyectos -->
+
    <section class="our-projects">
+
+    <div class="erase-arriba"></div>
+
        <div class="deg-background"></div>
 
        <div class="ejeZproyect">
@@ -89,7 +97,7 @@
 
            </div>
        </div>
-
+       <div class="erase-abajo"></div>
    </section>
    
    <!-- Testimonios -->
@@ -146,6 +154,9 @@
 </main>
 <!-- footer -->
 <footer class="footer">
+    <div class="erase-arriba"></div>
+
+
 <div class="deg-footer">
 
     <div class="ejeZfooter">
