--- a/Example/index.html
+++ b/Example/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <!-- UP -->
-    <div class="up">
+    <div class="arriba">
         <span><i class="fas fa-arrow-circle-up"></i></span>
     </div>
 
@@ -31,10 +31,10 @@
         <div class="list-container">
             <ul class="lists">
                 <li><a href="#" class="active">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#Nos">Nosotros</a></li>
+                <li><a href="#Pro">Servicios</a></li>
+                <li><a href="#My">Blog</a></li>
+                <li><a href="#form">Contacto</a></li>
             </ul>
         </div>
     </nav>
@@ -57,7 +57,7 @@
 <main>
     <section class="acerca-de">
         <div class="info-container">
-            <h1>Acerca de mi</h1>
+            <h1 id="My">Acerca de mi</h1>
             <p>Estoy mejorandome como programador junior, me estoy capacitando a diario y estoy estudiando.</p>
             <p>Las tecnologias que estoy utilizando a diario son javaScript - CSS - HTML</p>
             <div class="about-gallery">
@@ -84,7 +84,7 @@
            <div class="container-project">
 
                 <div class="project-title">
-                    <h2>Nuetros proyectos</h2>
+                    <h2 id="Pro">Nuetros proyectos</h2>
                     <hr>
                 </div>
 
@@ -103,7 +103,7 @@
    <!-- Testimonios -->
    <section class="testimonios">
         <div class="testimonios-title">
-            <h2>Testimonios</h2>
+            <h2 id="Nos">Nosotros</h2>
             <hr>
         </div>
 
@@ -162,7 +162,7 @@
     <div class="ejeZfooter">
         <div class="footer-content">
         <div class="footer-title">
-            <h2>Formulario</h2>
+            <h2 id="form">Formulario</h2>
             <hr>
         </div>   
 
